syntax = "proto3";

package users;

option go_package = "./";

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string name = 2;
  int64 telegram_id = 3;
}

message Tutor {
  User user = 1;
  string bio = 2;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateResponse);
  rpc GetUserById(GetById) returns (User);
  rpc GetTutorById(GetById) returns (Tutor);
  rpc GetStudentById(GetById) returns (User);
  rpc GetUserByTelegramId(GetByTelegramId) returns (User);
  rpc GetAllUsers(GetAllRequest) returns (GetAllResponse);
  rpc GetAllTutorsPagination(GetAllTutorsPaginationRequest) returns (GetTutorsPaginationResponse);
  rpc UpdateBioTutor(UpdateBioRequest) returns (UpdateBioResponse);
  rpc CreateReview() returns
  rpc GetReviews() returns
  rpc GetReview() returns
}

message GetAllTutorsPaginationRequest {
  int32 page = 1;
  int32 size = 2;
}

message UpdateBioRequest {
  string id = 1;
  string bio = 2;
}

message CreateUserRequest {
  int64 telegram_id = 1;
  string name = 2;
  string role = 3;
}

message CreateResponse {
  string id = 1;
}

message GetByTelegramId {
  int64 id = 1;
}

message GetById {
  string id = 1;
}

message GetStudentById {
  string id = 1;
}

message GetAllRequest {

}

message GetAllResponse {
  repeated User users = 1;
}


message GetTutorsPaginationResponse {
  int64 count = 1;
  repeated User users = 2;
}

message UpdateBioResponse {
  bool success = 1;
}